quantum_sensing/fancy_microscope/log/fancy_microscope_log_220225_114243.txt
2022-02-25T11:42:44|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "fancy_microscope.py", line 40, in <module>
    app = FancyMicroscopeApp(sys.argv)
  File "C:\Users\ZHao\.conda\envs\scopefoundry\lib\site-packages\ScopeFoundry\base_app.py", line 332, in __init__
    self.setup()
  File "fancy_microscope.py", line 26, in setup
    from custommeasure2 import ESRMeasure
  File "C:\Users\Public\quantum_sensing\quantum_sensing\fancy_microscope\custommeasure2.py", line 607
    def show_temperature(self):
      ^
IndentationError: expected an indented block

